# CircuitLab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  interactive_gpu.sub  pyproject.toml
infra/: distributed.py  fs.py  paths.py  wandb_utils.py
runners/: debug.py
runners/gpt2/: config.py  generate_activations.py  launch_generate.py  launch_test.py  launch_train.py
runners/llama1b/: config.py  launch_generate.py
scripts/: generate_activations.py  launch_test.py  launch_train.py  test_compression.py
src/: clt.py  clt_training_runner.py  load_model.py  utils.py
src/circuitlab/: clt.py  clt_training_runner.py  utils.py
src/clt/: clt.py  clt_training_runner.py
src/clt.egg-info/: SOURCES.txt
src/clt_forge/: clt.py  clt_training_runner.py
src/config/: __init__.py  clt_config.py  clt_training_runner_config.py
src/training/: activations_store.py  clt_trainer.py  optim.py
src/transformer_lens/: hooked_transformer_wrapper.py  sparse_patching.py
tests/: ddp_vs_ft.py  ddp_vs_ft_consistency_check.py  ddp_vs_ft_max_batchsize_comparison.py  test_clt.py  test_clt_training_runner.py  test_ddp_vs_ft.py  test_ddp_vs_ft_consistency_check.py  test_ddp_vs_ft_max_batchsize_comparison.py  utils.py
tests/autointerp/: test_pipeline.py
tests/config/: test_clt_config.py  test_clt_training_runner_config.py
tests/data/: generate_tokenized_dataset.py  verify_dataset.py
tests/training/: test_activations_store.py  test_clt_trainer.py  test_compressed_activations_store.py  test_gradient_accumulation.py  test_optim.py
(+81 files in other folders)
